[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "protonate-utils"
version = "0.1.0"
description = "Add hydrogens to ligands and proteins at a target pH."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
    { name = "Patrick Walters", email = "wpwalters@gmail.com" },
]
keywords = ["cheminformatics", "protonation", "hydrogens", "rdkit", "pdb"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Chemistry",
]

# Both modes' dependencies are installed by a plain `pip install`.
dependencies = [
    "rdkit",
    "dimorphite-dl",
    "biotite",
    "hydride",
    "numpy",
]

[project.optional-dependencies]
test = ["pytest"]

[project.urls]
Homepage = "https://github.com/PatWalters/protonate_utils"
Repository = "https://github.com/PatWalters/protonate_utils"
Issues = "https://github.com/PatWalters/protonate_utils/issues"

[project.scripts]
protonate-utils = "protonate_utils:main"

[tool.setuptools]
py-modules = ["protonate_utils"]
